--- a/preise.html
+++ b/preise.html
@@ -31,176 +31,216 @@
 
     <div class="container mb-5 mt-5">
       <h3>Privatunterricht</h3>
-          <table class="tg">
-          <thead>
-              <tr>
-              <th class="tg-xt05"><h6>Tage</h6></th>
-              <th class="tg-xt05"><h6>Preis</h6></th>
-              </tr>
-          </thead>
-          <tbody>
-              <tr>
-              <td class="tg-0lax">0,5 (2,5 Stunden)</td>
-              <td class="tg-0lax">239,-</td>
-              </tr>
-              <tr>
-              <td class="tg-0lax">1 (min. 5 Stunden)</td>
-              <td class="tg-0lax">329,-</td>
-              </tr>
-              <tr>
-              <td class="tg-0lac" colspan="2">Jede weitere Person 39,- . Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-              </tr>
-          </tbody>
-          </table>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Tage</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Preis</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">0,5 (2,5 Stunden)</td>
+            <td class="tg-0lax">249,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">1 (min. 5 Stunden)</td>
+            <td class="tg-0lax">349,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2">Jede weitere Person 39,- . Preise pro Person in Euro inkl. 20%
+              MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
 
-        <div class="container mb-5">
-                <h3>Gruppenkurse</h3>
-                    <table class="tg">
-                    <thead>
-                      <tr>
-                        <th class="tg-xt05"><h6>Tage</h6></th>
-                        <th class="tg-xt06"><h6>xDIM’s<br>(3-5 Personen)</h6></th>
-                        <th class="tg-xt06"><h6>Regulär<br>(ab 6 Personen)</h6></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="tg-0lax">1</td>
-                        <td class="tg-0lax">99,-</td>
-                        <td class="tg-0lax">89,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lax">2</td>
-                        <td class="tg-0lax">199,-</td>
-                        <td class="tg-0lax">169,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lax">3</td>
-                        <td class="tg-0lax">279,-</td>
-                        <td class="tg-0lax">219,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lax">4</td>
-                        <td class="tg-0lax">359,-</td>
-                        <td class="tg-0lax">279,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lax">5</td>
-                        <td class="tg-0lax">429,-</td>
-                        <td class="tg-0lax">339,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lax">6</td>
-                        <td class="tg-0lax">489,-</td>
-                        <td class="tg-0lax">389,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lac" colspan="3">Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-                      </tr>
-                    </tbody>
-                    </table>
-        </div>
-        <div class="container mb-5">
-                <h3>Special Kids Offer</h3>
-                    <table class="tg">
-                    <thead>
-                      <tr>
-                        <th class="tg-xt05"><h6>Tage</h6></th>
-                        <th class="tg-xt05"><h6>Special Kids Offer</h6></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="tg-0lax">0,5</td>
-                        <td class="tg-0lax">79,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lac" colspan="2">Preise pro Kind in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-                      </tr>
-                    </tbody>
-                    </table>
-        </div>
-        <div class="container mb-5">
-                <h3>Race</h3>
-                    <table class="tg">
-                    <thead>
-                      <tr>
-                        <th class="tg-xt05"><h6>Dauer</h6></th>
-                        <th class="tg-xt05"><h6>xDIM’s Race</h6></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="tg-0lax">Nach Vereinbarung</td>
-                        <td class="tg-0lax">189,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 3 Personen<br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-                      </tr>
-                    </tbody>
-                    </table>
-        </div>
-        <div class="container mb-5">
-                <h3>Safety First</h3>
-                    <table class="tg">
-                    <thead>
-                      <tr>
-                        <th class="tg-xt05"><h6>Dauer</h6></th>
-                        <th class="tg-xt05"><h6>Safety First</h6></th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td class="tg-0lax">Nach Vereinbarung</td>
-                        <td class="tg-0lax">139,-</td>
-                      </tr>
-                      <tr>
-                        <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 4 Personen<br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-                      </tr>
-                    </tbody>
-                    </table>
-        </div>
     <div class="container mb-5">
-        <h3>Morning Run</h3>
-            <table class="tg">
-            <thead>
-                <tr>
-                <th class="tg-xt05"><h6>Dauer</h6></th>
-                <th class="tg-xt05"><h6>Morning Run</h6></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                <td class="tg-0lax"><br>08:30– 10:00 Uhr</td>
-                <td class="tg-0lax"><br>99,-</td>
-                </tr>
-                <tr>
-                <td class="tg-0lac" colspan="2"><br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
-                </tr>
-            </tbody>
-            </table>
+      <h3>Gruppenkurse</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Tage</h6>
+            </th>
+            <th class="tg-xt06">
+              <h6>xDIM’s<br>(3-5 Personen)</h6>
+            </th>
+            <th class="tg-xt06">
+              <h6>Regulär<br>(ab 6 Personen)</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">1</td>
+            <td class="tg-0lax">99,-</td>
+            <td class="tg-0lax">89,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">2</td>
+            <td class="tg-0lax">199,-</td>
+            <td class="tg-0lax">169,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">3</td>
+            <td class="tg-0lax">279,-</td>
+            <td class="tg-0lax">219,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">4</td>
+            <td class="tg-0lax">359,-</td>
+            <td class="tg-0lax">279,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">5</td>
+            <td class="tg-0lax">429,-</td>
+            <td class="tg-0lax">339,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lax">6</td>
+            <td class="tg-0lax">489,-</td>
+            <td class="tg-0lax">389,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="3">Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor
+              Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <div class="container mb-5">
-        <h3>Specials</h3>
-        <table class="tg">
-            <thead>
-                <tr>
-                    <th class="tg-xt05"><h6>Dauer</h6></th>
-                    <th class="tg-xt05"><h6>Skitouren/ Langlauf/ Telemark</h6></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td class="tg-0lax">Nach Vereinbarung</td>
-                    <td class="tg-0lax">Preis auf Anfrage</td>
-                </tr>
-                <tr>
-                    <td class="tg-0lac" colspan="2">Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.;</td>
-                </tr>
-            </tbody>
-        </table>
+      <h3>Special Kids Offer</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Tage</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Special Kids Offer</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">0,5</td>
+            <td class="tg-0lax">79,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2">Preise pro Kind in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor
+              Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="container mb-5">
+      <h3>Race</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Dauer</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>xDIM’s Race</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">Nach Vereinbarung</td>
+            <td class="tg-0lax">189,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 3 Personen<br>Preise pro Person in Euro inkl. 20%
+              MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="container mb-5">
+      <h3>Safety First</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Dauer</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Safety First</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">Nach Vereinbarung</td>
+            <td class="tg-0lax">149,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2">Min. Teilnehmeranzahl 4 Personen<br>Preise pro Person in Euro inkl. 20%
+              MwSt.<br>Stornierungen bis 24 Stunden vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="container mb-5">
+      <h3>Morning Run</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Dauer</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Morning Run</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax"><br>08:30– 10:00 Uhr</td>
+            <td class="tg-0lax"><br>99,-</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2"><br>Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden
+              vor Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="container mb-5">
+      <h3>Specials</h3>
+      <table class="tg">
+        <thead>
+          <tr>
+            <th class="tg-xt05">
+              <h6>Dauer</h6>
+            </th>
+            <th class="tg-xt05">
+              <h6>Skitouren/ Langlauf/ Telemark</h6>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="tg-0lax">Nach Vereinbarung</td>
+            <td class="tg-0lax">Preis auf Anfrage</td>
+          </tr>
+          <tr>
+            <td class="tg-0lac" colspan="2">Preise pro Person in Euro inkl. 20% MwSt.<br>Stornierungen bis 24 Stunden vor
+              Kursbeginn sind kostenfrei, spätere werden in Rechnung gestellt.;</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
         <div class="footer">
